[gd_scene load_steps=10 format=3 uid="uid://bl4norlywdpi5"]

[ext_resource type="Texture2D" uid="uid://bkyjkujryr8fk" path="res://Assets/textures/player_ship.png" id="1_bljol"]
[ext_resource type="Script" path="res://Scripts/player.gd" id="1_wjcqk"]
[ext_resource type="AudioStream" uid="uid://ir8ik5ubppi8" path="res://Assets/audio/sfx_laser2.wav" id="3_fpfgy"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rm80g"]
radius = 130.0
height = 470.0

[sub_resource type="Gradient" id="Gradient_rxhkg"]
offsets = PackedFloat32Array(0.0421053, 0.515789, 0.978947, 0.989474, 1)
colors = PackedColorArray(0.77, 0.572367, 0.231, 1, 0.136842, 0.136842, 0.136842, 1, 0.29638, 0.10157, 0.10157, 1, 0.222747, 0.11785, 0.11785, 1, 0.64, 0.0256, 0.0256, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_jl6tr"]
gradient = SubResource("Gradient_rxhkg")

[sub_resource type="Curve" id="Curve_ndwep"]
_data = [Vector2(0, 0.56044), 0.0, 0.0, 0, 0, Vector2(0.926829, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_mjms7"]
curve = SubResource("Curve_ndwep")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_8k1pj"]
lifetime_randomness = 0.3
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(1, 15, 1)
spread = 28.0
initial_velocity_min = -200.0
initial_velocity_max = -200.0
gravity = Vector3(0, 0, 0)
scale_min = 10.0
scale_max = 10.0
scale_curve = SubResource("CurveTexture_mjms7")
color_ramp = SubResource("GradientTexture1D_jl6tr")

[node name="Player" type="CharacterBody2D"]
collision_mask = 2
script = ExtResource("1_wjcqk")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708
scale = Vector2(0.2, 0.2)
texture = ExtResource("1_bljol")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(6, -1)
scale = Vector2(0.2, 0.2)
shape = SubResource("CapsuleShape2D_rm80g")

[node name="RocketContainer" type="Node" parent="."]

[node name="ShootTimerRelay" type="Timer" parent="."]
one_shot = true

[node name="Shoot_audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_fpfgy")

[node name="FlameParticlesEffect" type="GPUParticles2D" parent="."]
position = Vector2(-37, 2)
amount = 100
process_material = SubResource("ParticleProcessMaterial_8k1pj")
lifetime = 0.4
